Fixed some layout issues, made design more responsive.
All project tasks is completed.

--- a/style/content.css
+++ b/style/content.css
@@ -5,10 +5,12 @@ h3 {
 .content__projects {
   display: grid;
   height: 80%;
-  grid-template: minmax(250px, 1fr) / repeat(auto-fit, minmax(300px, 1fr));
+  grid-template: minmax(250px, 1fr) / repeat(auto-fit, minmax(25vw, 1fr));
   grid-auto-rows: minmax(250px, 1fr);
   gap: 20px;
 }
+
+
 
 .card__project {
   grid-template: 1fr 50px / 1fr;
@@ -51,11 +53,14 @@ h3 {
   }
 }
 
+
+
 .content__announcements,
 .content__trending {
   padding: 20px;
   border-radius: 20px;
   background: var(--light-color);
+  min-width: 50px;
 
   display: grid;
   gap: 20px;
@@ -79,6 +84,8 @@ h3 {
   border-bottom: 2px solid var(--gray-color);
 }
 
+
+
 .card__trending {
   display: flex;
   justify-content: left;
@@ -88,6 +95,10 @@ h3 {
   img {
     height: 50px;
     width: 50px;
+  }
+
+  > div {
+    overflow: auto;
   }
 
   div > div {
